<resources>
    <string name="app_name">SMS Hub</string>
    <string name="sources_list_header">Sources</string>
    <string name="start_and_exit">Start end exit</string>
    <string name="stop_and_exit">Stop and exit</string>
    <string name="log_sms">Log SMS</string>
    <string name="phone_number">Phone number:</string>
    <string name="from_contacts">From contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="phone_number_hint">000 (00) 000 00 00</string>
    <string name="add_source">Add new source</string>
    <string name="no_sources">No sources</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_source">Remove source</string>
    <string name="phone_decription">Item name:</string>
    <string name="phone_decription_hint">The item display name</string>
    <string name="del_sms">Delete SMS</string>
    <string name="no_messages">No messages</string>
    <string name="notification_title">sources observed</string>
    <string name="notification_content">new messages received</string>
    <string name="observed_sources">Observed sources</string>
    <string name="new_source">New source</string>
    <string name="source">Source</string>
    <string name="enable_service">Process messages in background</string>
    <string name="service_started">Started</string>
    <string name="service_stopped">Stopped</string>
    <string name="disable_service_title">Really stop?</string>
    <string name="disable_service_message">Your data will not be collected any more.</string>
    <string name="choose_number_error">Not able to add. Please, type manually.</string>
    <string name="invalid_phone_format">Please, use a phone number in the following format: "XXX (XX) XXX XX XX" 10 digits</string>
    <string name="invalid_decription">Please, specify a correct event name.</string>
    <string name="close_without_saving">Close without saving?</string>
    <string name="phone_number_exist">This phone number already exists.</string>
</resources>
